[package]
name = "rustbasic"
version = "0.1.0"
authors = ["simon <simon.zeng@beyondsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.0"
algorithms = { path = "../algorithms" }
leetcode = { path = "../leetcode" }
cratesdepends = { path = "../cratesdepends" }